sqlite3/assets/sqlite3.h

typedef struct sqlite3_char sqlite3_char;
typedef struct sqlite3 sqlite3;
typedef struct sqlite3_stmt sqlite3_stmt;
typedef struct sqlite3_backup sqlite3_backup;
typedef struct sqlite3_api_routines sqlite3_api_routines;
typedef struct sqlite3_changeset_iter sqlite3_changeset_iter;
int sqlite3_busy_handler(sqlite3* db, int (*)(void*, int), void* context);
void* sqlite3_update_hook(sqlite3*,
                          void (*)(void*, int, sqlite3_char const*,
                                   sqlite3_char const*, int64_t),
                          void*);
void* sqlite3_commit_hook(sqlite3*, int (*)(void*), void*);
void* sqlite3_rollback_hook(sqlite3*, void (*)(void*), void*);
int sqlite3_bind_blob64(sqlite3_stmt* pStmt, int index, void* data,
                        uint64_t length, void (*destructor)(void*));
int sqlite3_bind_text(sqlite3_stmt* pStmt, int index, sqlite3_char* data,
                      int length, void (*destructor)(void*));
// Values

typedef struct sqlite3_value sqlite3_value;
// Functions

typedef struct sqlite3_context sqlite3_context;
int sqlite3_create_function_v2(
    sqlite3* db, sqlite3_char* zFunctionName, int nArg, int eTextRep,
    void* pApp, void (*xFunc)(sqlite3_context*, int, sqlite3_value**),
    void (*xStep)(sqlite3_context*, int, sqlite3_value**),
    void (*xFinal)(sqlite3_context*), void (*xDestroy)(void*));
int sqlite3_create_window_function(
    sqlite3* db, sqlite3_char* zFunctionName, int nArg, int eTextRep,
    void* pApp, void (*xStep)(sqlite3_context*, int, sqlite3_value**),
    void (*xFinal)(sqlite3_context*), void (*xValue)(sqlite3_context*),

    void (*xInverse)(sqlite3_context*, int, sqlite3_value**),
    void (*xDestroy)(void*));
void* sqlite3_aggregate_context(sqlite3_context* ctx, int nBytes);
void* sqlite3_user_data(sqlite3_context* ctx);
void sqlite3_result_blob64(sqlite3_context* ctx, void* data, uint64_t length,
                           void* destructor);
void sqlite3_result_double(sqlite3_context* ctx, double result);
void sqlite3_result_error(sqlite3_context* ctx, sqlite3_char* msg, int length);
void sqlite3_result_int64(sqlite3_context* ctx, int64_t result);
void sqlite3_result_null(sqlite3_context* ctx);
void sqlite3_result_text(sqlite3_context* ctx, sqlite3_char* data, int length,
                         void* destructor);
// Collations
int sqlite3_create_collation_v2(sqlite3*, sqlite3_char* zName, int eTextRep,
                                void* pArg,
                                int (*xCompare)(void*, int, const void*, int,
                                                const void*),
                                void (*xDestroy)(void*));
// Backup
sqlite3_backup* sqlite3_backup_init(sqlite3* pDestDb, sqlite3_char* zDestDb,
                                    sqlite3* pSrcDb, sqlite3_char* zSrcDb);
int sqlite3_backup_step(sqlite3_backup* p, int nPage);
int sqlite3_backup_finish(sqlite3_backup* p);
int sqlite3_backup_remaining(sqlite3_backup* p);
int sqlite3_backup_pagecount(sqlite3_backup* p);
// Extensions
int sqlite3_auto_extension(void* xEntryPoint);
// Database configuration
int sqlite3_db_config(sqlite3* db, int op, ...);
int sqlite3changeset_apply(
    sqlite3* db,               /* Apply change to "main" db of this handle */
    int nChangeset,            /* Size of changeset in bytes */
    void* pChangeset,          /* Changeset blob */
    int (*xFilter)(void* pCtx, /* Copy of sixth arg to _apply() */
                   const char* zTab /* Table name */
                   ),
    int (*xConflict)(
        void* pCtx,               /* Copy of sixth arg to _apply() */
        int eConflict,            /* DATA, MISSING, CONFLICT, CONSTRAINT */
        sqlite3_changeset_iter* p /* Handle describing change and conflict */
        ),
    void* pCtx /* First argument passed to xConflict */
);