sqlite3/lib/src/ffi/sqlite3.g.dart


@ffi.Native<
        ffi.Int Function(
            ffi.Pointer<sqlite3>,
            ffi.Pointer<sqlite3_char>,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Int,
                        ffi.Pointer<ffi.Pointer<sqlite3_value>>)>>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<sqlite3_context>)>>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<sqlite3_context>)>>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Int,
                        ffi.Pointer<ffi.Pointer<sqlite3_value>>)>>,
            ffi.Pointer<
                ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>)>(
    symbol: 'sqlite3_create_window_function')
external int sqlite3_create_window_function(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<sqlite3_char> zFunctionName,
  int nArg,
  int eTextRep,
  ffi.Pointer<ffi.Void> pApp,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<sqlite3_value>>)>>
      xStep,
  ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sqlite3_context>)>>
      xFinal,
  ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sqlite3_context>)>>
      xValue,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<sqlite3_value>>)>>
      xInverse,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      xDestroy,
);

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<sqlite3_context>, ffi.Int)>(
    symbol: 'sqlite3_aggregate_context')
external ffi.Pointer<ffi.Void> sqlite3_aggregate_context(
  ffi.Pointer<sqlite3_context> ctx,
  int nBytes,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<sqlite3_context>)>(
    symbol: 'sqlite3_user_data')
external ffi.Pointer<ffi.Void> sqlite3_user_data(
  ffi.Pointer<sqlite3_context> ctx,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Pointer<ffi.Void>,
        ffi.Uint64, ffi.Pointer<ffi.Void>)>(symbol: 'sqlite3_result_blob64')
external void sqlite3_result_blob64(
  ffi.Pointer<sqlite3_context> ctx,
  ffi.Pointer<ffi.Void> data,
  int length,
  ffi.Pointer<ffi.Void> destructor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Double)>(
    symbol: 'sqlite3_result_double')
external void sqlite3_result_double(
  ffi.Pointer<sqlite3_context> ctx,
  double result,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Pointer<sqlite3_char>,
        ffi.Int)>(symbol: 'sqlite3_result_error')
external void sqlite3_result_error(
  ffi.Pointer<sqlite3_context> ctx,
  ffi.Pointer<sqlite3_char> msg,
  int length,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Int64)>(
    symbol: 'sqlite3_result_int64')
external void sqlite3_result_int64(
  ffi.Pointer<sqlite3_context> ctx,
  int result,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sqlite3_context>)>(
    symbol: 'sqlite3_result_null')
external void sqlite3_result_null(
  ffi.Pointer<sqlite3_context> ctx,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<sqlite3_context>, ffi.Pointer<sqlite3_char>,
        ffi.Int, ffi.Pointer<ffi.Void>)>(symbol: 'sqlite3_result_text')
external void sqlite3_result_text(
  ffi.Pointer<sqlite3_context> ctx,
  ffi.Pointer<sqlite3_char> data,
  int length,
  ffi.Pointer<ffi.Void> destructor,
);

@ffi.Native<
        ffi.Int Function(
            ffi.Pointer<sqlite3>,
            ffi.Pointer<sqlite3_char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi
                .Pointer<
                    ffi
                    .NativeFunction<
                        ffi.Int Function(
                            ffi.Pointer<ffi.Void>,
                            ffi.Int,
                            ffi.Pointer<ffi.Void>,
                            ffi.Int,
                            ffi.Pointer<ffi.Void>)>>,
            ffi.Pointer<
                ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>)>(
    symbol: 'sqlite3_create_collation_v2')
external int sqlite3_create_collation_v2(
  ffi.Pointer<sqlite3> arg0,
  ffi.Pointer<sqlite3_char> zName,
  int eTextRep,
  ffi.Pointer<ffi.Void> pArg,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
                  ffi.Pointer<ffi.Void>, ffi.Int, ffi.Pointer<ffi.Void>)>>
      xCompare,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      xDestroy,
);

@ffi.Native<
    ffi.Pointer<sqlite3_backup> Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<sqlite3_char>,
        ffi.Pointer<sqlite3>,
        ffi.Pointer<sqlite3_char>)>(symbol: 'sqlite3_backup_init')
external ffi.Pointer<sqlite3_backup> sqlite3_backup_init(
  ffi.Pointer<sqlite3> pDestDb,
  ffi.Pointer<sqlite3_char> zDestDb,
  ffi.Pointer<sqlite3> pSrcDb,
  ffi.Pointer<sqlite3_char> zSrcDb,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_backup>, ffi.Int)>(
    symbol: 'sqlite3_backup_step')
external int sqlite3_backup_step(
  ffi.Pointer<sqlite3_backup> p,
  int nPage,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_backup>)>(
    symbol: 'sqlite3_backup_finish')
external int sqlite3_backup_finish(
  ffi.Pointer<sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_backup>)>(
    symbol: 'sqlite3_backup_remaining')
external int sqlite3_backup_remaining(
  ffi.Pointer<sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_backup>)>(
    symbol: 'sqlite3_backup_pagecount')
external int sqlite3_backup_pagecount(
  ffi.Pointer<sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'sqlite3_auto_extension')
external int sqlite3_auto_extension(
  ffi.Pointer<ffi.Void> xEntryPoint,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Int,
        ffi.VarArgs<
            (
              ffi.Int,
              ffi.Pointer<ffi.Int>,
            )>)>(symbol: 'sqlite3_db_config')
external int sqlite3_db_config(
  ffi.Pointer<sqlite3> db,
  int op,
  int va,
  ffi.Pointer<ffi.Int> va1,
);

@ffi.Native<
        ffi.Pointer<sqlite3_char> Function(ffi.Int, ffi.Pointer<sqlite3_char>)>(
    symbol: 'sqlite3_dart_temp_directory')
external ffi.Pointer<sqlite3_char> sqlite3_dart_temp_directory(
  int set1,
  ffi.Pointer<sqlite3_char> update,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Int, ffi.Int,
        ffi.Pointer<ffi.Int>)>(symbol: 'sqlite3_dart_db_config')
external int sqlite3_dart_db_config(
  ffi.Pointer<sqlite3> db,
  int op,
  int a,
  ffi.Pointer<ffi.Int> b,
);

final class sqlite3_char extends ffi.Opaque {}

final class sqlite3 extends ffi.Opaque {}

final class sqlite3_stmt extends ffi.Opaque {}

final class sqlite3_backup extends ffi.Opaque {}

final class sqlite3_api_routines extends ffi.Opaque {}

final class sqlite3_value extends ffi.Opaque {}

final class sqlite3_context extends ffi.Opaque {}
